--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,31 @@ button:focus,
 	text-align: center;
 }
 
+.navigation-list__item {
+	cursor: pointer;
+}
+
+.navigation-list__item a:before, 
+.navigation-list__item a:after {
+	position: absolute;
+	left: 0px;
+	width: 100%;
+	height: 2px;
+	content: "";
+	opacity: 0;
+	transition: all 0.3;
+}
+
+.navigation-list__item a:before {
+	top: 0px;
+	transform: translateY(-10px);
+}
+
+.navigation-list__item a:after {
+	bottom: 0px;
+	transform: translateY(10px);
+}
+
 .navigation-list__item--active {
 	text-decoration: underline;
 }
