--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ button:focus,
 	height: 2px;
 	content: "";
 	opacity: 0;
-	transition: all 0.3;
+	transition: all 0.3s;
 }
 
 .navigation-list__item a:before {
